--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,15 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "matplotlib": "^1.0.0",
     "next": "15.3.2",
+    "nltk": "^0.0.1",
+    "numpy": "^0.0.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
